ironing out errors

--- a/src/scss/Page2.scss
+++ b/src/scss/Page2.scss
@@ -1,7 +1,6 @@
 .page2-title {
-  font-family: 'GT Walsheim';
+  font-family: 'GT Walsheim Bold';
   font-size: 3.5em;
-  font-weight: 600;
   color: white;
   text-shadow: 0px 5px #AFC4DC;
   top: 200px;
@@ -28,9 +27,8 @@
 .page2-t {
   opacity: 0;
   visibility: hidden;
-  font-family: 'GT Walsheim';
+  font-family: 'GT Walsheim Bold';
   font-size: 1em;
-  font-weight: 600;
   color: white;
   text-shadow: 0px 5px #AFC4DC;
   top: 200px;
@@ -72,9 +70,8 @@
 }
 
 .bit {
-  font-family: 'GT Walsheim';
+  font-family: 'GT Walsheim Bold';
   font-size: 0.4em;
-  font-weight: 600;
   color: white;
   text-shadow: 0px 5px #AFC4DC;
   top: 200px;
