--- a/src/scss/Page1.scss
+++ b/src/scss/Page1.scss
@@ -32,9 +32,8 @@
 
 
 .name {
-  font-family: 'GT Walsheim';
+  font-family: 'GT Walsheim Bold';
   font-size: 3.5em;
-  font-weight: 600;
   color: white;
   text-shadow: 0px 5px #ffacbd;
   top: 200px;
