--- a/src/scss/Page3.scss
+++ b/src/scss/Page3.scss
@@ -57,7 +57,7 @@
 
 .projtitle {
   margin: 60px 0 0 20px;
-  font-family: 'GT Walsheim';
+  font-family: 'GT Walsheim Bold';
   font-weight: 600;
   color: white;
   height: 110px;
@@ -66,7 +66,7 @@
 }
 
 .mywork {
-  font-family: 'GT Walsheim';
+  font-family: 'GT Walsheim Bold';
   font-size: 3em;
   font-weight: 600;
   color: white;
