--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -69,7 +69,7 @@ section {
 .title {
   font-weight: 100;
   color: white;
-  font-family: 'GT Walsheim';
+  font-family: 'GT Walsheim Light';
   font-size: 25px;
   animation: fadeInTop forwards 0.6s ease-in-out;
 }
@@ -85,7 +85,7 @@ section {
 .shy {
   visibility: hidden;
   opacity: 0;
-  font-family: 'GT Walsheim';
+  font-family: 'GT Walsheim Bold';
   font-size: 2em;
   font-weight: 600;
   color: white;
@@ -178,3 +178,4 @@ polyline {
 @import "Page1";
 @import "Responsive";
 @import "Navbar";
+@import "fonts";
