--- a/src/scss/Page1.scss
+++ b/src/scss/Page1.scss
@@ -12,7 +12,7 @@
   background: linear-gradient(
       rgba(0, 0, 0, 0.03),
       rgba(0, 0, 0, 0.03)
-    ), url('/assets/broken-saturate.png') no-repeat center center fixed;
+    ), url('/assets/broken-saturate.jpg') no-repeat center center fixed;
   width:100%;
   height:100%;
 }
