--- a/src/scss/Page2.scss
+++ b/src/scss/Page2.scss
@@ -28,7 +28,7 @@
   opacity: 0;
   visibility: hidden;
   font-family: 'GT Walsheim Bold';
-  font-size: 1em;
+  font-size: 50px;
   color: white;
   text-shadow: 0px 5px #AFC4DC;
   top: 200px;
