--- a/src/scss/Page1.scss
+++ b/src/scss/Page1.scss
@@ -12,7 +12,7 @@
   background: linear-gradient(
       rgba(0, 0, 0, 0.03),
       rgba(0, 0, 0, 0.03)
-    ), url('/assets/images/broken-saturate.jpg') no-repeat center center fixed;
+    ), url('./assets/images/broken-saturate.jpg') no-repeat center center fixed;
   width:100%;
   height:100%;
 }
@@ -33,7 +33,7 @@
 
 .name {
   font-family: 'GT Walsheim Bold';
-  font-size: 3.5em;
+  font-size: 50px;
   color: white;
   text-shadow: 0px 5px #ffacbd;
   top: 200px;
