--- a/src/scss/Page3.scss
+++ b/src/scss/Page3.scss
@@ -44,10 +44,12 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  z-index: 9999999;
+  padding: 20px;
 }
 
 .projcaption {
-  margin: 10% 5% 0 20px;
+  margin: 10% 5% 0 0;
   font-family: 'Akkurat-Mono';
   font-size: 20px;
   color: white;
@@ -56,21 +58,34 @@
 }
 
 .projtitle {
-  margin: 60px 0 0 20px;
+  margin: 60px 0 0 0;
   font-family: 'GT Walsheim Bold';
   font-weight: 600;
+  font-size: 35px;
   color: white;
-  height: 110px;
-  width: 90%;
-  z-index: 1111111;
+  height: 90px;
+  text-decoration: none;
+  transition: all .5s ease;
 }
+
+$p-color: #ffacbd;
+
+a:hover {
+  text-decoration: none;
+}
+
+.projtitle:hover {
+  color: #f7e8cd
+}
+
+
 
 .mywork {
   font-family: 'GT Walsheim Bold';
-  font-size: 3em;
+  font-size: 50px;
   font-weight: 600;
   color: white;
-  text-shadow: 0px 5px #ffacbd;
+  text-shadow: 0px 5px $p-color;
   width: inherit;
   height: 35px;
   line-height: 35px;
