--- a/src/scss/Responsive.scss
+++ b/src/scss/Responsive.scss
@@ -11,7 +11,6 @@
     right: 4%;
   }
 
-
   .projtitle {
     font-size: 25px;
   }
@@ -106,7 +105,7 @@
   }
 
   .name {
-    font-size: 3em;
+    font-size: 40px;
     margin-bottom: 0;
   }
 
@@ -176,6 +175,7 @@
 }
 @media all and (max-width: 575px) {
 
+
 .arrow2, .arrow3 {
   display: none;
 }
@@ -207,7 +207,8 @@
 }
 
 .middlerec {
-  align-items: center
+  align-items: center;
+  padding: 5px;
 }
 
 .cj-logo {
@@ -237,7 +238,7 @@
 }
 
 .projImg {
-  width: 220px;
+  width: 200px;
   margin: 10px auto;
 }
 
@@ -251,7 +252,7 @@
 
 .projcaption {
   width: 85%;
-  height: 130px;
+  height: 150px;
   text-align: justify;
   font-size: 12px;
   overflow: scroll;
