--- a/src/scss/Page1.scss
+++ b/src/scss/Page1.scss
@@ -15,6 +15,7 @@
     ), url('./assets/images/broken-saturate.jpg') no-repeat center center fixed;
   width:100%;
   height:100%;
+  justify-content: center;
 }
 
 .arrow1 {
