--- a/src/scss/Page3.scss
+++ b/src/scss/Page3.scss
@@ -14,6 +14,13 @@
   border: 5px solid white;
 }
 
+@mixin trans7 {
+  -webkit-transition: 0.7s;
+  -moz-transition: 0.7s;
+  -o-transition: 0.7s;
+  transition: 0.7s;
+}
+
 .rightrec, .leftrec {
   position: absolute;
   width: 88%;
@@ -23,10 +30,7 @@
   display: block;
   align-items: flex-start;
   justify-content: center;
-  -webkit-transition: 0.7s;
-  -moz-transition: 0.7s;
-  -o-transition: 0.7s;
-  transition: 0.7s;
+  @include trans7;
 }
 
 .rightrec.show {
@@ -78,6 +82,12 @@ a:hover {
   color: #f7e8cd
 }
 
+@mixin trans5 {
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+}
 
 
 .mywork {
@@ -90,10 +100,8 @@ a:hover {
   height: 35px;
   line-height: 35px;
   text-align: center;
-  -webkit-transition: 0.5s;
-  -moz-transition: 0.5s;
-  -o-transition: 0.5s;
-  transition: 0.5s;
+  margin-top: 20px;
+  @include trans5;
   // opacity: 0;
   // visibility: hidden;
 }
